// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Templates/Post Should render correctly 1`] = `
.c0 {
  max-width: 912px;
  margin: 0 auto;
  padding: 153px 16px 100px;
}

.c1 a {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.c1 pre,
.c1 ul,
.c1 iframe {
  margin-bottom: 24px;
}

.c1 p code,
.c1 li code {
  display: inline-block;
  padding: 2px 4px;
  color: #c7254e;
  background-color: #f9f2f4;
  border-radius: 4px;
}

.c1 pre {
  line-height: 1.4;
  color: #fff;
  background-color: #282c34;
  border-radius: 6px;
  cursor: default;
  max-width: none;
}

.c2 {
  text-align: center;
  margin-bottom: 0;
}

.c3 {
  display: block;
  text-align: center;
  margin-bottom: 32px;
}

.c4 {
  position: relative;
  height: 250px;
  margin-bottom: 32px;
}

.c5 {
  background-color: #4c57ba;
  color: #fff;
  border-radius: 6px;
  padding: 8px 24px;
  margin-top: 32px;
  -webkit-transition: 0.3s;
  transition: 0.3s;
}

.c5:hover {
  opacity: 0.8;
}

@media (min-width:768px) {
  .c0 {
    padding-top: 193px;
  }
}

@media (min-width:768px) {
  .c3 {
    margin-bottom: 40px;
  }
}

@media (min-width:768px) {
  .c4 {
    height: 300px;
    margin-bottom: 40px;
  }
}

<div>
  <header>
    Header
  </header>
  <main
    class="c0"
  >
    <article
      class="c1"
    >
      <h1
        class="c2"
      >
        Luke is comming! :D
      </h1>
      <p
        class="c3"
      >
        <small>
          Postado em
          : 
          29/06/2022
        </small>
      </p>
      <div
        class="c4"
      >
        <img
          alt="Luke is comming! :D"
          layout="fill"
          objectfit="contain"
          src="/img/bg.jpg"
        />
      </div>
      <p>
        Lorem ipsum dolor sit amet consectetur adipisicing elit. Sapiente fugit numquam tempora voluptatum voluptas in, doloremque maiores natus cum voluptate culpa perferendis ipsam pariatur unde optio id amet dolorum inventore.
      </p>
    </article>
    <a
      class="c5"
      href="/blog"
    >
      Voltar
    </a>
  </main>
</div>
`;

exports[`Templates/Post Should render correctly in en 1`] = `
.c0 {
  max-width: 912px;
  margin: 0 auto;
  padding: 153px 16px 100px;
}

.c1 a {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.c1 pre,
.c1 ul,
.c1 iframe {
  margin-bottom: 24px;
}

.c1 p code,
.c1 li code {
  display: inline-block;
  padding: 2px 4px;
  color: #c7254e;
  background-color: #f9f2f4;
  border-radius: 4px;
}

.c1 pre {
  line-height: 1.4;
  color: #fff;
  background-color: #282c34;
  border-radius: 6px;
  cursor: default;
  max-width: none;
}

.c2 {
  text-align: center;
  margin-bottom: 0;
}

.c3 {
  display: block;
  text-align: center;
  margin-bottom: 32px;
}

.c4 {
  position: relative;
  height: 250px;
  margin-bottom: 32px;
}

.c5 {
  background-color: #4c57ba;
  color: #fff;
  border-radius: 6px;
  padding: 8px 24px;
  margin-top: 32px;
  -webkit-transition: 0.3s;
  transition: 0.3s;
}

.c5:hover {
  opacity: 0.8;
}

@media (min-width:768px) {
  .c0 {
    padding-top: 193px;
  }
}

@media (min-width:768px) {
  .c3 {
    margin-bottom: 40px;
  }
}

@media (min-width:768px) {
  .c4 {
    height: 300px;
    margin-bottom: 40px;
  }
}

<div>
  <header>
    Header
  </header>
  <main
    class="c0"
  >
    <article
      class="c1"
    >
      <h1
        class="c2"
      >
        Luke is comming! :D
      </h1>
      <p
        class="c3"
      >
        <small>
          Posted on
          : 
          29/06/2022
        </small>
      </p>
      <div
        class="c4"
      >
        <img
          alt="Luke is comming! :D"
          layout="fill"
          objectfit="contain"
          src="/img/bg.jpg"
        />
      </div>
      <p>
        Lorem ipsum dolor sit amet consectetur adipisicing elit. Sapiente fugit numquam tempora voluptatum voluptas in, doloremque maiores natus cum voluptate culpa perferendis ipsam pariatur unde optio id amet dolorum inventore.
      </p>
    </article>
    <a
      class="c5"
      href="/blog"
    >
      Back
    </a>
  </main>
</div>
`;
